// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link スナップショット Default 1`] = `
<body>
  <div>
    <a
      class="link_linkStyle__1vz8ftz0"
      href="#"
    >
      Default Link
    </a>
  </div>
</body>
`;

exports[`Link スナップショット Variants 1`] = `
<body>
  <div>
    <div>
      <a
        class="link_linkStyle__1vz8ftz0 link_linkStyle_colored_true__1vz8ftz1"
        href="#"
      >
        Colored Link
      </a>
    </div>
    <div>
      <a
        class="link_linkStyle__1vz8ftz0 link_linkStyle_underlined_true__1vz8ftz2"
        href="#"
      >
        Underlined Link
      </a>
    </div>
    <div>
      <a
        class="link_linkStyle__1vz8ftz0 link_linkStyle_noHovered_true__1vz8ftz3"
        href="#"
      >
        no hovered Link
      </a>
    </div>
    <div>
      <a
        class="link_linkStyle__1vz8ftz0 link_linkStyle_display_block__1vz8ftz4"
        href="#"
      >
        <div
          style="border-radius: var(--radius-100__1874wf71g);"
        >
          Block Link
        </div>
      </a>
    </div>
  </div>
</body>
`;
